fix image display on mobile

--- a/assets/css/style-default.css
+++ b/assets/css/style-default.css
@@ -2057,6 +2057,7 @@ button {
 	-moz-box-shadow: 0 0px 10px rgba(0, 0, 0, 0.25);
 	box-shadow: 0 0px 10px rgba(0, 0, 0, 0.25);
 	border-radius: 4px;
+	text-align: center;
 }
 
 .lgx-speakers .lgx-single-speaker figure a.profile-img {
